# CMakeProject1_cv_task_1

./: CMakeSettings.json
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
